# xr3wm

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  todo
.github/workflows/: rust.yml
src/: commands.rs  config.rs  container.rs  core.rs  ewmh.rs  keycode.rs  keysym.rs  layout.rs  r3wm.rs  stack.rs  state.rs  statusbar.rs  utils.rs  workspace.rs  workspaces.rs  xlib_window_system.rs  xr3wm.rs
