[project]
name = "xr3wm"
version = "0.0.1"
authors = ["Cristian Kubis <cristian.kubis@tsunix.de>"]
edition = "2021"
build = "build.rs"

[dependencies]
log = "0.4"
fern = "0.6"
anyhow = { version = "1.0", features = ["backtrace"] }
clap = "2.33"
libloading = "0.7"
typetag = "0.1"
serde = "1.0"
serde_json = "1.0"
libc = "0.2"
x11 = { version = "2.19", features = ["xlib", "xinerama"] }

[lib]
name = "xr3wm"
path = "src/core.rs"

[[bin]]
name = "xr3wm"
path = "src/xr3wm.rs"
