[package]
name = "xr3wm"
version = "0.0.1"
authors = ["Cristian Kubis <cristian.kubis@tsunix.de>"]
edition = "2024"

[dependencies]
log = "0.4"
env_logger = { version = "0.11", default-features = false }
anyhow = { version = "1.0", features = ["backtrace"] }
libloading = "0.9"
typetag = { version = "0.2", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
libc = "0.2"
x11 = { version = "2.21", features = ["xlib", "xinerama"] }

[features]
default = ["reload"]
reload = ["dep:typetag", "dep:serde", "dep:serde_json"]

[lib]
name = "xr3wm"
path = "src/core.rs"

[[bin]]
name = "xr3wm"
path = "src/xr3wm.rs"
